# cvdatakit

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
cvdatakit/: __init__.py
cvdatakit/active_learning/: __init__.py  loop.py
cvdatakit/active_learning/backends/: __init__.py  base.py  pytorch_backend.py  tensorflow_backend.py
cvdatakit/active_learning/strategies/: __init__.py  diversity.py  error_localization.py  uncertainty.py
cvdatakit/cli/: main.py
cvdatakit/io/: __init__.py  coco_reader.py  report.py
cvdatakit/quality/: __init__.py  annotation_checks.py  label_quality.py  mislabel_detection.py
cvdatakit/recipes/: __init__.py  coco.py  imagenet.py
cvdatakit/stats/: __init__.py  dataset_stats.py
tests/: conftest.py  smoke_test.py  test_active_learning.py  test_io.py  test_quality.py  test_stats.py
