[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvdatakit"
version = "0.1.0"
description = "Dataset-centric CV toolkit: label-quality checks, mislabel detection, class-imbalance analysis, and active-learning loop orchestration."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "CV Data-Centric Toolkit Contributors" }]
keywords = [
    "computer-vision",
    "active-learning",
    "label-quality",
    "dataset-centric",
    "coco",
    "annotation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "Pillow>=10.0",
    "click>=8.1",
    "rich>=13.0",
    "tqdm>=4.66",
    "pycocotools>=2.0.7",
]

[project.optional-dependencies]
torch = ["torch>=2.0", "torchvision>=0.15"]
tensorflow = ["tensorflow>=2.13"]
all = ["torch>=2.0", "torchvision>=0.15", "tensorflow>=2.13"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
cvdatakit = "cvdatakit.cli.main:cli"

[project.urls]
Homepage = "https://github.com/your-org/cvdatakit"
Repository = "https://github.com/your-org/cvdatakit"
Issues = "https://github.com/your-org/cvdatakit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cvdatakit*"]

[tool.setuptools.package-data]
cvdatakit = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
